--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Ghazanfar Farooq &mdash; Sales & Trade Marketing Professional</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Ghazanfar Farooq - With 18 years of experience at leading MNCs and FMCG companies, I bring a dynamic blend of energy and creativity to every project. I thrive on challenging the status quo and am known for my can-do attitude and results-oriented approach. Instead of seeking excuses, I actively pursue opportunities to drive success. As a leader, I set clear directions and lead from the front, consistently supporting and motivating my team. My reliability and team spirit make me a dependable team player, always ready to lend a helping hand." />
+	<meta name="description" content="Ghazanfar Farooq - Experienced professional with 18 years in MNCs and FMCG. Results-driven leader known for challenging norms, motivating teams, and driving success" />
 	<meta name="keywords" content="Ghazanfar Farooq, ghazanfarfarooq, Key Accounts Management, Category Management, Distribution Management, Sales" />
 	<meta name="author" content="Ghazanfar Farooq" />
 
