--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Ghazanfar Farooq &mdash; Sales & Trade Marketing Professional</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Ghazanfar Farooq - Experienced professional with 18 years in MNCs and FMCG. Results-driven leader known for challenging norms and driving success" />
+	<meta name="description" content="Ghazanfar Farooq – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success" />
 	<meta name="keywords" content="Ghazanfar Farooq, ghazanfarfarooq, Key Accounts Management, Category Management, Distribution Management, Sales" />
 	<meta name="author" content="Ghazanfar Farooq" />
 
