--- a/index.html
+++ b/index.html
@@ -403,33 +403,25 @@
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="https://www.linkedin.com/posts/ghazanfar-farooq-448b4912_beiersdorf-togetherwecare-carebeyondskin-activity-7067767781038931968-4IEk?utm_source=share&utm_medium=member_desktop" class="work" style="background-image: url(images/portfolio-1.jpg);">
-						<div class="desc">
-							<h3>Project Name</h3>
-							<span>CARE BEYOND SKIN Day</span>
+						<div class="desc" style="background-color: transparent;">
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="https://www.linkedin.com/posts/khadim-ali-shah-bukhari-institute-of-technology_kasbit-guestspeakersession-sales-activity-7132248093592276992-LQ8U?utm_source=share&utm_medium=member_desktop" class="work" style="background-image: url(images/portfolio-2.jpg);">
-						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Evaluation of the Relevance Sustainability in Technological Evolution and Consumer</span>
+						<div class="desc" style="background-color: transparent;">
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="https://www.linkedin.com/posts/ghazanfar-farooq-448b4912_careforquality-beiersdorf-worldqualityday-activity-6999756006066909184-z365?utm_source=share&utm_medium=member_desktop" class="work" style="background-image: url(images/portfolio-3.jpg);">
-						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Care For Quality</span>
+						<div class="desc" style="background-color: transparent;">
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="https://www.linkedin.com/posts/ghazanfar-farooq-448b4912_people-success-motivation-activity-6990233696108732416-WFR0?utm_source=share&utm_medium=member_desktop" class="work" style="background-image: url(images/portfolio-4.jpg);">
-						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Milestone Achieved</span>
+						<div class="desc" style="background-color: transparent;">
 						</div>
 					</a>
 				</div>
