--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="Ghazanfar Farooq – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success" />
 	<meta name="keywords" content="Ghazanfar Farooq, ghazanfarfarooq, Key Accounts Management, Category Management, Distribution Management, Sales" />
 	<meta name="author" content="Ghazanfar Farooq" />
-
+        <link rel="canonical" href="https://ghazanfarfarooq.com" />
 	<!-- 
 	//////////////////////////////////////////////////////
 
