--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 	<meta name="keywords" content="Ghazanfar Farooq, ghazanfarfarooq, Key Accounts Management, Category Management, Distribution Management, Sales" />
 	<meta name="author" content="Ghazanfar Farooq" />
         <link rel="canonical" href="https://ghazanfarfarooq.com" />
+
+	<meta property="og:title" content=Ghazanfar Farooq>
+<meta property="og:site_name" content="">
+<meta property="og:url" content=https://ghazanfarfarooq.com/>
+<meta property="og:description" content=Ghazanfar Farooq – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success>
+<meta property="og:type" content=profile>
+<meta property="og:image" content=https://ghazanfarfarooq.com/images/preview>
+		
 	<!-- 
 	//////////////////////////////////////////////////////
 
