--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:url" content=https://ghazanfarfarooq.com/>
 <meta property="og:description" content=Ghazanfar Farooq – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success>
 <meta property="og:type" content=profile>
-<meta property="og:image" content=https://ghazanfarfarooq.com/images/preview>
+<meta property="og:image" content=https://ibb.co/Lk9ngKf>
 		
 	<!-- 
 	//////////////////////////////////////////////////////
