--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 <meta property="og:url" content=https://ghazanfarfarooq.com/>
 <meta property="og:description" content=Ghazanfar Farooq – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success>
 <meta property="og:type" content=profile>
-<meta property="og:image" content=https://ibb.co/Lk9ngKf>
+<meta proper<b:if cond='data:blog.postImageUrl'>
+      <meta expr:content='resizeImage(data:blog.postImageUrl, 0)' property='og:image'/>
+      <b:else/>
+      <meta content='https://github.com/AGrock1/Ghazanfar-Farooq/blob/fc389f2bca1746095f7f28cde21ef2f6d4b601fb/images/preview.jpg' property='og:image'/>
+    </b:if>  
 		
 	<!-- 
 	//////////////////////////////////////////////////////
