--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 	<meta name="author" content="Ghazanfar Farooq" />
         <link rel="canonical" href="https://ghazanfarfarooq.com" />
 
-	<meta property="og:title" content=Ghazanfar Farooq>
-<meta property="og:site_name" content="">
-<meta property="og:url" content=https://ghazanfarfarooq.com/>
-<meta property="og:description" content=Ghazanfar Farooq – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success>
-<meta property="og:type" content=profile>
-<meta proper<b:if cond='data:blog.postImageUrl'>
-      <meta expr:content='resizeImage(data:blog.postImageUrl, 0)' property='og:image'/>
-      <b:else/>
-      <meta content='https://github.com/AGrock1/Ghazanfar-Farooq/blob/fc389f2bca1746095f7f28cde21ef2f6d4b601fb/images/preview.jpg' property='og:image'/>
-    </b:if>  
+	<meta property="og:type" content="website">
+<meta property="og:title" content="Ghazanfar Farooq">
+<meta property="og:description" content="Ghazanfar Farooq – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success">
+<meta property="og:url" content="https://ghazanfarfarooq.com/">
+<meta property="og:url" content="https://github.com/AGrock1/Ghazanfar-Farooq/blob/fc389f2bca1746095f7f28cde21ef2f6d4b601fb/images/preview.jpg">
+ <!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:title" content="Ghazanfar Farooq">
+<meta property="twitter:description" content="Ghazanfar Farooq – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success">
+<meta property="twitter:url" content="https://ghazanfarfarooq.com/">
+<meta property="twitter:url" content="https://github.com/AGrock1/Ghazanfar-Farooq/blob/fc389f2bca1746095f7f28cde21ef2f6d4b601fb/images/preview.jpg">  
 		
 	<!-- 
 	//////////////////////////////////////////////////////
