--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 <meta property="og:title" content="Ghazanfar Farooq">
 <meta property="og:description" content="Ghazanfar Farooq – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success">
 <meta property="og:url" content="https://ghazanfarfarooq.com/">
+<meta property="og:url" content="https://github.com/AGrock1/Ghazanfar-Farooq/blob/main/images/preview.jpg?raw=true">
  <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:title" content="Ghazanfar Farooq">
 <meta property="twitter:description" content="Ghazanfar Farooq – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success">
 <meta property="twitter:url" content="https://ghazanfarfarooq.com/">
+<meta property="twitter:url" content="https://github.com/AGrock1/Ghazanfar-Farooq/blob/main/images/preview.jpg?raw=true">
 		
 	<!-- 
 	//////////////////////////////////////////////////////
