--- a/index.html
+++ b/index.html
@@ -10,17 +10,26 @@
 	<meta name="author" content="Ghazanfar Farooq" />
         <link rel="canonical" href="https://ghazanfarfarooq.com" />
 
-	<meta property="og:type" content="website">
-<meta property="og:title" content="Ghazanfar Farooq">
+	<!-- HTML Meta Tags -->
+<title>Ghazanfar Farooq — Sales & Trade Marketing Professional</title>
+<meta name="description" content="Ghazanfar Farooq – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://ghazanfarfarooq.com">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Ghazanfar Farooq — Sales & Trade Marketing Professional">
 <meta property="og:description" content="Ghazanfar Farooq – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success">
-<meta property="og:url" content="https://ghazanfarfarooq.com/">
-<meta property="og:url" content="https://github.com/AGrock1/Ghazanfar-Farooq/blob/main/images/preview.jpg?raw=true">
- <!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:title" content="Ghazanfar Farooq">
-<meta property="twitter:description" content="Ghazanfar Farooq – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success">
-<meta property="twitter:url" content="https://ghazanfarfarooq.com/">
-<meta property="twitter:url" content="https://github.com/AGrock1/Ghazanfar-Farooq/blob/main/images/preview.jpg?raw=true">
+<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/934f5365-7f57-4500-a520-8fc4b111c740.jpg?token=PmkEmCaYUoBONZZGweSyWdPBPE3GeXmrBvqe10iOqeE&height=627&width=1200&expires=33253875999">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="ghazanfarfarooq.com">
+<meta property="twitter:url" content="https://ghazanfarfarooq.com">
+<meta name="twitter:title" content="Ghazanfar Farooq — Sales & Trade Marketing Professional">
+<meta name="twitter:description" content="Ghazanfar Farooq – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success">
+<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/934f5365-7f57-4500-a520-8fc4b111c740.jpg?token=PmkEmCaYUoBONZZGweSyWdPBPE3GeXmrBvqe10iOqeE&height=627&width=1200&expires=33253875999">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 		
 	<!-- 
 	//////////////////////////////////////////////////////
