--- a/index.html
+++ b/index.html
@@ -30,6 +30,28 @@
 <meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/934f5365-7f57-4500-a520-8fc4b111c740.jpg?token=PmkEmCaYUoBONZZGweSyWdPBPE3GeXmrBvqe10iOqeE&height=627&width=1200&expires=33253875999">
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Person",
+  "name": "Ghazanfar Farooq",
+  "url": "https://ghazanfarfarooq.com/",
+  "image": "https://opengraph.b-cdn.net/production/images/934f5365-7f57-4500-a520-8fc4b111c740.jpg?token=PmkEmCaYUoBONZZGweSyWdPBPE3GeXmrBvqe10iOqeE&height=627&width=1200&expires=33253875999",
+  "sameAs": [
+    "https://www.facebook.com/ghazanfar",
+    "https://ghazanfarfarooq.com/",
+    "https://www.linkedin.com/in/ghazanfar-farooq-448b4912",
+    "https://www.instagram.com/ghazanfar81/",
+    "https://twitter.com/ghazanfar81?lang=en"
+  ],
+  "jobTitle": "Sales Manager",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "Beiersdorf"
+  }  
+}
+</script>
 		
 	<!-- 
 	//////////////////////////////////////////////////////
