--- a/index.html
+++ b/index.html
@@ -54,39 +54,29 @@
 </script>
 
 		<!-- generics -->
-<link rel="icon" href="/favicon-32.png" sizes="32x32">
-<link rel="icon" href="/favicon-57.png" sizes="57x57">
-<link rel="icon" href="/favicon-76.png" sizes="76x76">
-<link rel="icon" href="/favicon-96.png" sizes="96x96">
-<link rel="icon" href="/favicon-120.png" sizes="120x120">
-<link rel="icon" href="/favicon-192.png" sizes="192x192">
-<link rel="icon" href="/favicon-228.png" sizes="228x228">
+<link rel="icon" href="/favicon-32x32.png" sizes="32x32">
+<link rel="icon" href="/favicon-57x52.png" sizes="57x57">
+<link rel="icon" href="/favicon-76x76.png" sizes="76x76">
+<link rel="icon" href="/favicon-96x96.png" sizes="96x96">
+<link rel="icon" href="/favicon-120x120.png" sizes="120x120">
+<link rel="icon" href="/favicon-192x192.png" sizes="192x192">
+<link rel="icon" href="/favicon-228x228.png" sizes="228x228">
 
 <!-- Android -->
-<link rel="shortcut icon" sizes="192x192" href=“/favicon-192.png">
+<link rel="shortcut icon" sizes="192x192" href=“/favicon-192x192.png">
 
 <!-- iOS -->
-<link rel="apple-touch-icon" href="/favicon-120.png" sizes="120x120">
-<link rel="apple-touch-icon" href="path/to/favicon-152.png" sizes="152x152">
-<link rel="apple-touch-icon" href="path/to/favicon-180.png" sizes="180x180">
+<link rel="apple-touch-icon" href="/favicon-120x120.png" sizes="120x120">
+<link rel="apple-touch-icon" href="path/to/favicon-152x152.png" sizes="152x152">
+<link rel="apple-touch-icon" href="path/to/favicon-180x180.png" sizes="180x180">
 
 <!-- Windows 8 IE 10-->
 <meta name="msapplication-TileColor" content="#000000">
-<meta name="msapplication-TileImage" content="/favicon-144.png">
+<meta name="msapplication-TileImage" content="/favicon-144x144.png">
 
 <!— Windows 8.1 + IE11 and above —>
 <meta name="msapplication-config" content="/browserconfig.xml" />
 
-		<?xml version="1.0" encoding="utf-8"?>
-<browserconfig>
-<msapplication>
-<tile>
-<square70x70logo src=“favicon-76.png”/>
-<square150x150logo src="favicon-228.png"/>
-<TileColor>#000000</TileColor>
-</tile>
-</msapplication>
-</browserconfig>
 	<!-- 
 	//////////////////////////////////////////////////////
 
