--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
 <!— Windows 8.1 + IE11 and above —>
 <meta name="msapplication-config" content="/browserconfig.xml" />
 
+		<meta name="msapplication-config" content="/browserconfig.xml" />
+
 	<!-- 
 	//////////////////////////////////////////////////////
 
