--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
 <meta name="msapplication-config" content="/browserconfig.xml" />
 
 		<meta name="msapplication-config" content="/browserconfig.xml" />
+		<link rel="icon" type="image/x.icon" href="https://ghazanfarfarooq.com/favicon.ico">
+
 
 	<!-- 
 	//////////////////////////////////////////////////////
