--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <meta name="msapplication-config" content="/browserconfig.xml" />
 
 		<meta name="msapplication-config" content="/browserconfig.xml" />
-		<link rel="icon" type="image/x.icon" href="https://ghazanfarfarooq.com/favicon.ico">
+		<link rel="icon" type="image/x-icon" href="https://ghazanfarfarooq.com/favicon.ico">
 
 
 	<!-- 
