--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
 <!-- iOS -->
 <link rel="apple-touch-icon" href="/favicon-120x120.png" sizes="120x120">
-<link rel="apple-touch-icon" href="path/to/favicon-152x152.png" sizes="152x152">
-<link rel="apple-touch-icon" href="path/to/favicon-180x180.png" sizes="180x180">
+<link rel="apple-touch-icon" href="/favicon-152x152.png" sizes="152x152">
+<link rel="apple-touch-icon" href="/favicon-180x180.png" sizes="180x180">
 
 <!-- Windows 8 IE 10-->
 <meta name="msapplication-TileColor" content="#000000">
