--- a/index.html
+++ b/index.html
@@ -53,32 +53,13 @@
 }
 </script>
 
-		<!-- generics -->
-<link rel="icon" href="/favicon-32x32.png" sizes="32x32">
-<link rel="icon" href="/favicon-57x52.png" sizes="57x57">
-<link rel="icon" href="/favicon-76x76.png" sizes="76x76">
-<link rel="icon" href="/favicon-96x96.png" sizes="96x96">
-<link rel="icon" href="/favicon-120x120.png" sizes="120x120">
-<link rel="icon" href="/favicon-192x192.png" sizes="192x192">
-<link rel="icon" href="/favicon-228x228.png" sizes="228x228">
-
-<!-- Android -->
-<link rel="shortcut icon" sizes="192x192" href=“/favicon-192x192.png">
-
-<!-- iOS -->
-<link rel="apple-touch-icon" href="/favicon-120x120.png" sizes="120x120">
-<link rel="apple-touch-icon" href="/favicon-152x152.png" sizes="152x152">
-<link rel="apple-touch-icon" href="/favicon-180x180.png" sizes="180x180">
-
-<!-- Windows 8 IE 10-->
-<meta name="msapplication-TileColor" content="#000000">
-<meta name="msapplication-TileImage" content="/favicon-144x144.png">
-
-<!— Windows 8.1 + IE11 and above —>
-<meta name="msapplication-config" content="/browserconfig.xml" />
-
-		<meta name="msapplication-config" content="/browserconfig.xml" />
-		<link rel="icon" type="image/x-icon" href="https://ghazanfarfarooq.com/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
 
 
 	<!-- 
