--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
-							<h1><span>Ghazanfar Farooq</span></h1>
+							<h1><span>Sir Qamar Hussain</span></h1>
 							<h3><span>Sales & Trade Marketing Professional</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
