--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
 							<h1><span>Sir Qamar Hussain</span></h1>
-							<h3><span>Sales & Trade Marketing Professional</span></h3>
+							<h3><span>Physics Teacher</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="https://www.facebook.com/ghazanfar"><i class="icon-facebook2"></i></a></li>
-									<li><a href="https://www.linkedin.com/in/ghazanfar-farooq-448b4912"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="https://www.facebook.com/p/Physics-with-Qamar-Hussain-100064169044163/"><i class="icon-facebook2"></i></a></li>
+									<li><a href="https://www.youtube.com/playlist?list=PLqHFTXdQy13WZa3ntwPHdCLfmAVhvYuLK"><i class="icon-youtube2"></i></a></li>
 								</ul>
 							</p>
 						</div>
