--- a/index.html
+++ b/index.html
@@ -3,30 +3,30 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Ghazanfar Farooq &mdash; Sales & Trade Marketing Professional</title>
+	<title>Qamar Hussain &mdash; Physics Teacher</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Ghazanfar Farooq – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success" />
-	<meta name="keywords" content="Ghazanfar Farooq, ghazanfarfarooq, Key Accounts Management, Category Management, Distribution Management, Sales" />
-	<meta name="author" content="Ghazanfar Farooq" />
+	<meta name="description" content="Qamar Hussain – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success" />
+	<meta name="keywords" content="Qamar Hussain, ghazanfarfarooq, Key Accounts Management, Category Management, Distribution Management, Sales" />
+	<meta name="author" content="Qamar Hussain" />
         <link rel="canonical" href="https://ghazanfarfarooq.com" />
 
 	<!-- HTML Meta Tags -->
-<title>Ghazanfar Farooq — Sales & Trade Marketing Professional</title>
-<meta name="description" content="Ghazanfar Farooq – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success">
+<title>Qamar Hussain — Physics Teacher</title>
+<meta name="description" content="Qamar Hussain – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success">
 
 <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://ghazanfarfarooq.com">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Ghazanfar Farooq — Sales & Trade Marketing Professional">
-<meta property="og:description" content="Ghazanfar Farooq – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success">
+<meta property="og:title" content="Qamar Hussain — Physics Teacher">
+<meta property="og:description" content="Qamar Hussain – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success">
 <meta property="og:image" content="https://opengraph.b-cdn.net/production/images/934f5365-7f57-4500-a520-8fc4b111c740.jpg?token=PmkEmCaYUoBONZZGweSyWdPBPE3GeXmrBvqe10iOqeE&height=627&width=1200&expires=33253875999">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="ghazanfarfarooq.com">
 <meta property="twitter:url" content="https://ghazanfarfarooq.com">
-<meta name="twitter:title" content="Ghazanfar Farooq — Sales & Trade Marketing Professional">
-<meta name="twitter:description" content="Ghazanfar Farooq – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success">
+<meta name="twitter:title" content="Qamar Hussain — Physics Teacher">
+<meta name="twitter:description" content="Qamar Hussain – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success">
 <meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/934f5365-7f57-4500-a520-8fc4b111c740.jpg?token=PmkEmCaYUoBONZZGweSyWdPBPE3GeXmrBvqe10iOqeE&height=627&width=1200&expires=33253875999">
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
@@ -35,7 +35,7 @@
 {
   "@context": "https://schema.org/",
   "@type": "Person",
-  "name": "Ghazanfar Farooq",
+  "name": "Qamar Hussain",
   "url": "https://ghazanfarfarooq.com/",
   "image": "https://opengraph.b-cdn.net/production/images/934f5365-7f57-4500-a520-8fc4b111c740.jpg?token=PmkEmCaYUoBONZZGweSyWdPBPE3GeXmrBvqe10iOqeE&height=627&width=1200&expires=33253875999",
   "sameAs": [
@@ -147,14 +147,14 @@
 			<div class="row">
 				<div class="col-md-4">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Ghazanfar Farooq</span></li>
+						<li><span class="first-block">Full Name:</span><span class="second-block">Qamar Hussain</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">03028297598</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">ghazanfar81@yahoo.com</span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">Karachi, Pakistan</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
-					<h2>Ghazanfar Farooq</h2>
+					<h2>Qamar Hussain</h2>
 					<p>With 18 years of experience at leading MNCs and FMCG companies, I bring a dynamic blend of energy and creativity to every project. I thrive on challenging the status quo and am known for my can-do attitude and results-oriented approach. Instead of seeking excuses, I actively pursue opportunities to drive success. As a leader, I set clear directions and lead from the front, consistently supporting and motivating my team. My reliability and team spirit make me a dependable team player, always ready to lend a helping hand.</p>
 					<p>
 						<ul class="fh5co-social-icons">
@@ -539,7 +539,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; Made By Ghazanfar Farooq</div>
+					<p>&copy; Made By Qamar Hussain</div>
 			</div>
 		</div>
 	</div>
