--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Qamar Hussain &mdash; Physics Teacher</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Qamar Hussain – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success" />
+	<meta name="description" content="Qamar Hussain – Sir Qamar Hussain is a well-regarded physicist, known for his contributions to the field of physics in Pakistan." />
 	<meta name="keywords" content="Qamar Hussain, ghazanfarfarooq, Key Accounts Management, Category Management, Distribution Management, Sales" />
 	<meta name="author" content="Qamar Hussain" />
         <link rel="canonical" href="https://ghazanfarfarooq.com" />
 
 	<!-- HTML Meta Tags -->
 <title>Qamar Hussain — Physics Teacher</title>
-<meta name="description" content="Qamar Hussain – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success">
+<meta name="description" content="Qamar Hussain – Sir Qamar Hussain is a well-regarded physicist, known for his contributions to the field of physics in Pakistan.">
 
 <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://ghazanfarfarooq.com">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Qamar Hussain — Physics Teacher">
-<meta property="og:description" content="Qamar Hussain – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success">
+<meta property="og:description" content="Qamar Hussain – Sir Qamar Hussain is a well-regarded physicist, known for his contributions to the field of physics in Pakistan.">
 <meta property="og:image" content="https://opengraph.b-cdn.net/production/images/934f5365-7f57-4500-a520-8fc4b111c740.jpg?token=PmkEmCaYUoBONZZGweSyWdPBPE3GeXmrBvqe10iOqeE&height=627&width=1200&expires=33253875999">
 
 <!-- Twitter Meta Tags -->
@@ -26,7 +26,7 @@
 <meta property="twitter:domain" content="ghazanfarfarooq.com">
 <meta property="twitter:url" content="https://ghazanfarfarooq.com">
 <meta name="twitter:title" content="Qamar Hussain — Physics Teacher">
-<meta name="twitter:description" content="Qamar Hussain – Sales professional with almost 2 decades of experience in MNCs and FMCG. Known for challenging norms and driving success">
+<meta name="twitter:description" content="Qamar Hussain – Sir Qamar Hussain is a well-regarded physicist, known for his contributions to the field of physics in Pakistan.">
 <meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/934f5365-7f57-4500-a520-8fc4b111c740.jpg?token=PmkEmCaYUoBONZZGweSyWdPBPE3GeXmrBvqe10iOqeE&height=627&width=1200&expires=33253875999">
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
