--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
   "url": "https://ghazanfarfarooq.com/",
   "image": "https://opengraph.b-cdn.net/production/images/934f5365-7f57-4500-a520-8fc4b111c740.jpg?token=PmkEmCaYUoBONZZGweSyWdPBPE3GeXmrBvqe10iOqeE&height=627&width=1200&expires=33253875999",
   "sameAs": [
-    "https://www.facebook.com/ghazanfar",
+    "https://www.facebook.com/p/Physics-with-Qamar-Hussain-100064169044163/",
     "https://ghazanfarfarooq.com/",
-    "https://www.linkedin.com/in/ghazanfar-farooq-448b4912",
+    "https://www.youtube.com/playlist?list=PLqHFTXdQy13WZa3ntwPHdCLfmAVhvYuLK",
     "https://www.instagram.com/ghazanfar81/",
     "https://twitter.com/ghazanfar81?lang=en"
   ],
@@ -148,18 +148,18 @@
 				<div class="col-md-4">
 					<ul class="info">
 						<li><span class="first-block">Full Name:</span><span class="second-block">Qamar Hussain</span></li>
-						<li><span class="first-block">Phone:</span><span class="second-block">03028297598</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">ghazanfar81@yahoo.com</span></li>
+						<li><span class="first-block">Phone:</span><span class="second-block">0346 3305641</span></li>
+						<li><span class="first-block">Email:</span><span class="second-block">qamarhussain79@gmail.com</span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">Karachi, Pakistan</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
 					<h2>Qamar Hussain</h2>
-					<p>With 18 years of experience at leading MNCs and FMCG companies, I bring a dynamic blend of energy and creativity to every project. I thrive on challenging the status quo and am known for my can-do attitude and results-oriented approach. Instead of seeking excuses, I actively pursue opportunities to drive success. As a leader, I set clear directions and lead from the front, consistently supporting and motivating my team. My reliability and team spirit make me a dependable team player, always ready to lend a helping hand.</p>
+					<p>Sir Qamar Hussain is a well-regarded physicist, known for his contributions to the field of physics in Pakistan. He has been involved in various research projects and academic endeavors, including work related to theoretical and applied physics.</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="https://www.facebook.com/ghazanfar"><i class="icon-facebook3"></i></a></li>
-							<li><a href="https://www.linkedin.com/in/ghazanfar-farooq-448b4912"><i class="icon-linkedin2"></i></a></li>
+							<li><a href="https://www.facebook.com/p/Physics-with-Qamar-Hussain-100064169044163/"><i class="icon-facebook3"></i></a></li>
+							<li><a href="https://www.youtube.com/playlist?list=PLqHFTXdQy13WZa3ntwPHdCLfmAVhvYuLK"><i class="icon-youtube2"></i></a></li>
 						</ul>
 					</p>
 				</div>
