--- a/index.html
+++ b/index.html
@@ -171,24 +171,24 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>My Resume</h2>
+					<h2>Present & Past Affiliation</h2>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-12 col-md-offset-0">
 					<ul class="timeline">
 						<li class="timeline-heading text-center animate-box">
-							<div><h3>Work Experience</h3></div>
+							<div><h3>Colleges</h3></div>
 						</li>
 						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Sales Manager - International Modern Trade E-Comm and South Pakistan</h3>
-									<span class="company">Beiersdorf - 2018 - Current</span>
+									<h3 class="timeline-title">Alpha College</h3>
+									<span class="company">A Level</span>
 								</div>
 								<div class="timeline-body">
-									<p> I successfully led over 50% of Pakistan's business operations, including international accounts, e-commerce, and the southern region of the country. My efforts in establishing and nurturing strong relationships with key clients resulted in a remarkable 30% increase in business and enhanced customer retention. Additionally, I served as the Category Captain for Lotions, Creams, Lips, and Deo categories, ensuring market leadership and driving category growth.
+									<p> Alpha College is home to a holistic learning experience established to nurture future leaders.
 										</p>
 								</div>
 							</div>
@@ -197,11 +197,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Regional Sales Manager</h3>
-									<span class="company">LOTTE Confectionery (S.E.A) Pte Ltd - 2017 - 2018</span>
+									<h3 class="timeline-title">Whales College</h3>
+									<span class="company">A Level</span>
 								</div>
 								<div class="timeline-body">
-									<p>I led a team of four Area Managers and twenty Territory Officers, overseeing a comprehensive portfolio that included snacks, biscuits, cakes, pastas, noodles, gums, and chocolates. My leadership was instrumental in executing key initiatives such as the Visibility Improvement Project, Route Optimization Project, and Coverage Expansion Project. These efforts culminated in achieving the highest sales and distribution numbers ever recorded for the company.</p>
+									<p>Whales College is a private educational institution located in Pakistan.</p>
 								</div>
 							</div>
 						</li>
@@ -209,11 +209,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">District Manager & South (Sind & Baluchistan)</h3>
-									<span class="company">Abudawood Pakistan - 2016 - 2017</span>
+									<h3 class="timeline-title">Beaconhouse College Program</h3>
+									<span class="company">A Level</span>
 								</div>
 								<div class="timeline-body">
-									<p>In the role of heading the South Region with an annual turnover exceeding $50 million, I lead a team of over 125 individuals, overseeing complete sales operations. I successfully reengineered the go-to-market strategy, resulting in an additional 15% profitability. This achievement includes recording the highest distribution numbers ever for Haircare, Pampers, Ariel, and Gillette. Additionally, I geo-tagged more than 22,000 outlets in the district and conducted a time-motion study, which significantly improved route optimization.</p>
+									<p>BCP is an exceptional place for students to discover their true potential.</p>
 								</div>
 							</div>
 						</li>
@@ -221,11 +221,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">National Key Accounts & Trade Marketing Manager</h3>
-									<span class="company">Hilal Foods (Pvt) Ltd. - 2013 - 2016</span>
+									<h3 class="timeline-title">The American Foundation School</h3>
+									<span class="company">A Level</span>
 								</div>
 								<div class="timeline-body">
-									<p>In my role at Hilal, I developed and headed the Trade Marketing function, creating a comprehensive trade marketing strategy document. I managed an annual budget of $5 million and significantly enhanced retail visibility through best-in-class trade marketing activities. These included display drives, innovative in-store visibility touch points, point of sale materials (POSM), induction of merchandisers, and the implementation of planograms.</p>
+									<p>TAFS believe in holistic development, focusing on the intellectual, social, emotional, and physical well-being of each student.</p>
 								</div>
 							</div>
 						</li>
@@ -233,11 +233,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Area Manager Karachi</h3>
-									<span class="company">FrieslandCampina (Engro Foods Ltd.) - 2010 - 2013</span>
+									<h3 class="timeline-title">The City School</h3>
+									<span class="company">A Level</span>
 								</div>
 								<div class="timeline-body">
-									<p>I successfully oversaw a $30 million per annum business operation, strategically expanding brand reach through the development of new channels, thereby enhancing brand penetration. Through innovative approaches and strategic decision-making, I achieved double-digit growth compared to the previous year, demonstrating a keen ability to drive consistent and substantial progress within the organization.</p>
+									<p>Established in Karachi in 1978, The City School is today one of the largest private school networks across the globe.</p>
 								</div>
 							</div>
 						</li>
@@ -245,42 +245,19 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Key Accounts Executive</h3>
-									<span class="company">British American Tobacco Pakistan - 2005 - 2010</span>
+									<h3 class="timeline-title">The Meritorious College</h3>
+									<span class="company">A Level</span>
 								</div>
 								<div class="timeline-body">
-									<p>Efficiently overseeing the operations of ICA’s & Top End Groceries in Karachi, I spearheaded initiatives that led to significant growth. In 2009, sales volumes surged by an impressive 13% compared to the previous year. By devising innovative merchandising strategies, I successfully boosted our market share from 83% to an outstanding 94%, solidifying our position in the industry.</p>
+									<p>Affiliated with Cambridge Board, Meritorious A Levels College facilitates our students with quality education and a curriculum that inspires and empowers.</p>
 								</div>
 							</div>
 						</li>
 						<br>
 						<li class="timeline-heading text-center animate-box">
-							<div><h3>Education</h3></div>
+							<div><h3>ETC.</h3></div>
 						</li>
-						<li class="animate-box timeline-unverted">
-							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">Masters in Business Administration (MBA)									</h3>
-									<span class="company">Institute of Business Management (CBM)  - 2004 - 2007</span>
-								</div>
-								<div class="timeline-body">
-									<p>Earning my MBA from the Institute of Business Management (CBM) was transformative. It armed me with essential business acumen, strategic prowess, and leadership skills vital for today's corporate realm. Through rigorous coursework and practical exposure, I sharpened my analytical thinking and gained insights into global business dynamics. CBM instilled in me a spirit of innovation and critical thinking that fuels my professional journey.</p>
-								</div>
-							</div>
-						</li>
-						<li class="timeline-inverted animate-box">
-							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">Bachelor in Software Engineering (BSE) </h3>
-									<span class="company">BAHRIA UNIVERSITY - 2000 - 2004</span>
-								</div>
-								<div class="timeline-body">
-									<p>I earned my Bachelor's in Software Engineering (BSE) from Bahria University. The program offered a blend of theoretical knowledge and practical skills, preparing me for the intricacies of software development. Through rigorous coursework and hands-on projects, I gained expertise in programming languages, system design, and software architecture. This foundation has equipped me to tackle real-world challenges in the field with confidence and innovation.</p>
-								</div>
-							</div>
-						</li>
+						
 						</li>
 			    	</ul>
 				</div>
